// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates ZTD row map from CREATE TABLE statements 1`] = `
"// ZTD TEST ROW MAP - AUTO GENERATED
// Tests must import TestRowMap from this file and never from src.
// This file is synchronized with DDL using ztd-config.

import type { FixtureRow, TableFixture, TableSchemaDefinition } from '@rawsql-ts/testkit-core';
export interface TestRowMap {
  'public.profiles': PublicProfilesTestRow;
  'public.users': PublicUsersTestRow;
}

export interface PublicProfilesTestRow extends FixtureRow {
  user_id: number;
  bio: string | null;
  rating: string | null;
}

export interface PublicUsersTestRow extends FixtureRow {
  id: number;
  email: string;
  created_at: string;
}

export type TestRow<K extends keyof TestRowMap> = TestRowMap[K];
export type ZtdRowShapes = TestRowMap;
export type ZtdTableName = keyof TestRowMap;

export type ZtdTableSchemas = Record<ZtdTableName, TableSchemaDefinition>;

export const tableSchemas: ZtdTableSchemas = {
  'public.profiles': {
    columns: {
      user_id: "bigint",
      bio: "text",
      rating: "numeric",
    }
  },
  'public.users': {
    columns: {
      id: "serial",
      email: "text",
      created_at: "timestamptz",
    }
  },
};

export function tableSchema<K extends ZtdTableName>(tableName: K): TableSchemaDefinition {
  return tableSchemas[tableName];
}

export type ZtdTableFixture<K extends ZtdTableName> = TableFixture & {
  tableName: K;
  rows: ZtdRowShapes[K][];
  schema: TableSchemaDefinition;
};

export interface ZtdConfig {
  tables: ZtdTableName[];
}

export function tableFixture<K extends ZtdTableName>(
  tableName: K,
  rows: ZtdRowShapes[K][],
  schema?: TableSchemaDefinition
): TableFixture {
  return { tableName, rows, schema };
}

export function tableFixtureWithSchema<K extends ZtdTableName>(
  tableName: K,
  rows: ZtdRowShapes[K][]
): ZtdTableFixture<K> {
  // Always pair fixture rows with the canonical schema generated from DDL.
  return { tableName, rows, schema: tableSchemas[tableName] };
}
"
`;

exports[`handles multiple sources with composite keys and cross-schema references 1`] = `
"// ZTD TEST ROW MAP - AUTO GENERATED
// Tests must import TestRowMap from this file and never from src.
// This file is synchronized with DDL using ztd-config.

import type { FixtureRow, TableFixture, TableSchemaDefinition } from '@rawsql-ts/testkit-core';
export interface TestRowMap {
  'analytics.weekly_stats': AnalyticsWeeklyStatsTestRow;
  'public.users': PublicUsersTestRow;
  'sales.orders': SalesOrdersTestRow;
}

export interface AnalyticsWeeklyStatsTestRow extends FixtureRow {
  stats_id: number;
  order_id: number;
  order_line: number;
  sales_amount: string;
}

export interface PublicUsersTestRow extends FixtureRow {
  id: number;
  name: string;
}

export interface SalesOrdersTestRow extends FixtureRow {
  order_id: number;
  line: number;
  customer_id: number;
  total: string;
}

export type TestRow<K extends keyof TestRowMap> = TestRowMap[K];
export type ZtdRowShapes = TestRowMap;
export type ZtdTableName = keyof TestRowMap;

export type ZtdTableSchemas = Record<ZtdTableName, TableSchemaDefinition>;

export const tableSchemas: ZtdTableSchemas = {
  'analytics.weekly_stats': {
    columns: {
      stats_id: "serial",
      order_id: "bigint",
      order_line: "bigint",
      sales_amount: "numeric",
    }
  },
  'public.users': {
    columns: {
      id: "serial",
      name: "text",
    }
  },
  'sales.orders': {
    columns: {
      order_id: "bigint",
      line: "bigint",
      customer_id: "bigint",
      total: "numeric",
    }
  },
};

export function tableSchema<K extends ZtdTableName>(tableName: K): TableSchemaDefinition {
  return tableSchemas[tableName];
}

export type ZtdTableFixture<K extends ZtdTableName> = TableFixture & {
  tableName: K;
  rows: ZtdRowShapes[K][];
  schema: TableSchemaDefinition;
};

export interface ZtdConfig {
  tables: ZtdTableName[];
}

export function tableFixture<K extends ZtdTableName>(
  tableName: K,
  rows: ZtdRowShapes[K][],
  schema?: TableSchemaDefinition
): TableFixture {
  return { tableName, rows, schema };
}

export function tableFixtureWithSchema<K extends ZtdTableName>(
  tableName: K,
  rows: ZtdRowShapes[K][]
): ZtdTableFixture<K> {
  // Always pair fixture rows with the canonical schema generated from DDL.
  return { tableName, rows, schema: tableSchemas[tableName] };
}
"
`;
